Add session renewal and clear csrf tokens on login / logout

--- a/src/PrestaShopBundle/Resources/config/services/bundle/services.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/services.yml
@@ -102,3 +102,8 @@ services:
     autowire: true
     arguments:
       - '@prestashop.core.query_bus'
+
+  PrestaShopBundle\Security\Admin\SessionRenewer:
+    arguments:
+      $storage: "@security.csrf.token_storage"
+    autowire: true
